fix: fixed gap between components in detail project page

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,7 @@
   --space-md: 24px;
   --space-lg: 32px;
   --space-xl: 48px;
+  --space-blog: 100px;
 
   /* *SUPERFICI */
   --background: #ffffff;
